fixed URI for supabase connection

--- a/src/backend/cmd/server/.env
+++ b/src/backend/cmd/server/.env
@@ -1,6 +1,8 @@
-DB_USER=postgres
-DB_PASSWORD=Ankitjee@123
-DB_PORT=5432
-DB_SSLMODE=require
-DB_HOST=db.qypqerxdvaufkwhnozyo.supabase.co
-DB_NAME=postgres
+# DB_USER=postgres
+# DB_PASSWORD=Ankitjee@123
+# DB_PORT=5432
+# DB_SSLMODE=require
+# DB_HOST=db.qypqerxdvaufkwhnozyo.supabase.co
+# DB_NAME=postgres
+
+URI=postgresql://postgres.qypqerxdvaufkwhnozyo:Ankitjee@123@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres
